--- a/css/all.css
+++ b/css/all.css
@@ -8951,7 +8951,7 @@ a.contact-link:hover {
 }
 
 .live_casino-screenshot {
-    background: url(../images/live_casino.png) no-repeat 0 0;
+    background: url('https://i.pinimg.com/originals/fa/71/e4/fa71e4d4d681b771a7ea472fa38f6b2f.png') no-repeat 0 0;
     background-size: 100%;
     height: 400px;
     width: 100%;
