--- a/css/all.css
+++ b/css/all.css
@@ -8959,7 +8959,7 @@ a.contact-link:hover {
 }
 
 .side-screenshot {
-    background: url(../images/screen_short_01.jpg) no-repeat 0 0;
+    background: url('https://image.winudf.com/v2/image1/Y29tLndpdHR5Z2FtZXMudGVlbnBhdHRpX3NjcmVlbl8zXzE1NTc1NTgwNTdfMDk4/screen-3.jpg?fakeurl=1&type=.jpg') no-repeat 0 0;
     background-size: 100%;
     height: 400px;
     width: 100%;
@@ -8967,7 +8967,7 @@ a.contact-link:hover {
 }
 
 .side-screenshot2 {
-    background: url(../images/screen_short_02.jpg) no-repeat 0 0;
+    background: url('https://qph.fs.quoracdn.net/main-qimg-fe35f8abc6786c0caf737659c0913003') no-repeat 0 0;
     background-size: 100%;
     height: 400px;
     width: 100%;
@@ -8975,7 +8975,7 @@ a.contact-link:hover {
 }
 
 .side-screenshot3 {
-    background: url(../images/screen_short_03.jpg) no-repeat 0 0;
+    background: url('https://image.freepik.com/free-photo/creative-background-roulette-gaming-dice-cards-casino-chips-dark-background_99433-24.jpg') no-repeat 0 0;
     background-size: 100%;
     height: 400px;
     width: 100%;
