--- a/css/all.css
+++ b/css/all.css
@@ -2491,7 +2491,13 @@ fieldset[disabled] .btn-primary.active {
     color: #428bca;
     background-color: #fff
 }
+.abc {height:600px;
+    background-image:url(../images/hero.png);
+    background-position: 0% 0%;
+    background-repeat: no-repeat;
+        position: relative;
 
+    overflow:hidden;}
 .btn-success {
     color: #fff;
     background-color: #5cb85c;
