--- a/css/all.css
+++ b/css/all.css
@@ -2495,7 +2495,7 @@ fieldset[disabled] .btn-primary.active {
     background-image:url(../images/hero.png);
     background-position: 0% 0%;
     background-repeat: no-repeat;
-    background-size: 50%;
+    background-size: 1000px;
         position: relative;
 
     overflow:hidden;}
