--- a/css/all.css
+++ b/css/all.css
@@ -2491,11 +2491,10 @@ fieldset[disabled] .btn-primary.active {
     color: #428bca;
     background-color: #fff
 }
-.abc {height:600px;
+.abc {
     background-image:url(../images/hero.png);
     background-position: 0% 0%;
     background-repeat: no-repeat;
-    background-size: 1000px;
         position: relative;
 
     overflow:hidden;}
