--- a/css/all.css
+++ b/css/all.css
@@ -2492,13 +2492,13 @@ fieldset[disabled] .btn-primary.active {
     background-color: #fff
 }
 .abc {height:600px;
-    width:600px;
+    
     background-image:url('http://gamentio.com/documents/1130902/0/MainBanner.png');
     background-position: 0% 0%;
     background-repeat: no-repeat;
         position: relative;
 
-    overflow:hidden;}
+    }
 
 .btn-success {
     color: #fff;
