--- a/css/all.css
+++ b/css/all.css
@@ -2492,11 +2492,13 @@ fieldset[disabled] .btn-primary.active {
     background-color: #fff
 }
 .abc {height:600px;
-    width:1000px;
+    width:100%;
     background-image:url('http://gamentio.com/documents/1130902/0/MainBanner.png');
     background-position: 0% 0%;
     background-repeat: no-repeat;
         position: relative;
+    background-size: 100%;
+    overflow:hidden;
 
     }
 
