--- a/css/all.css
+++ b/css/all.css
@@ -2491,7 +2491,7 @@ fieldset[disabled] .btn-primary.active {
     color: #428bca;
     background-color: #fff
 }
-.abc {height:200px;
+.abc {height:100%;
     width:100%;
     background-image:url('http://gamentio.com/documents/1130902/0/MainBanner.png');
     background-position: 0% 0%;
